--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
 is visualization on heapify correct?
 fix #0 at end of URL and default behavior for links
-set up popup
+set webpack to production mode in deploy script
