fix linter errors in topbar

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
-change heapify default display
+
 fix #0 at end of URL and default behavior for links
 set webpack to production mode in deploy script
 add reset selector
 play button
+add display for progress for each sort
+add display for swaps for each sort
+add display for comparisons for each sort
