add comments to topbar

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
-change spacebar behavior
-check play button behavior
+bug -- not enough steps
 grey out unusable play buttons rather than conditoinally render
+add hover stuff for links
 add display for progress for each sort
 add display for swaps for each sort
 add display for comparisons for each sort
+turn off animation on reset
