--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,4 @@
-set up deploy script correctly
-
-highlight boxes when sort is complete
+keyboard shortcuts popup
 add display for progress for each sort
 add display for swaps for each sort
 add display for comparisons for each sort
-turn off animation on reset
